# Projet_jeux_C-

./: CMakeLists.txt  README.md
editeur de map/: Map-test.tiled-session  map-test.tmx  sans titre.tiled-session
editeur de map/Texture/: TX Tileset Grass.tsx
editeur de map/animation/: WaterAndFire.tsx  pillar.tsx  torche.tsx
editeur de map/map/: map-niveau1.json  map-niveau1.tmx  sans titre.tmx
images/: lien_personnage.docx  ~$en_personnage.docx
src/: Boss.cpp  Boss.h  Golem.cpp  Golem.h  Gun.cpp  Gun.h  Inventory.cpp  Inventory.h  MainWindow.cpp  MainWindow.h  MyScene.cpp  MyScene.h  Weapon.h  bat.cpp  bat.h  menu.cpp  menu.h  mob.cpp  mob.h  mobmort.cpp  mobmort.h  player.cpp  player.h  projectile.cpp  projectile.h
